<resources>
    <string name="main_app_name">Github User App</string>
    <string name="app_name">Github User App</string>
    <string name="detail_user">Detail User</string>
    <string name="username">Username</string>
    <string name="searchbar_hint">Search Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="fullname">Full Name</string>
    <string name="theme">Setting Theme</string>
    <string name="number">999</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="favorites">Favorites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>

</resources>